samples/_failures_safe/1761255217_9b6398_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_16a2b35c.c: In function ‘main’:
./samples/SAFE/__tmp_16a2b35c.c:160:12: error: missing terminating " character
  160 |     printf("Complete command history:
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_16a2b35c.c:160:5: error: expected expression at end of input
  160 |     printf("Complete command history:
      |     ^~~~~~
./samples/SAFE/__tmp_16a2b35c.c:160:5: error: expected declaration or statement at end of input
